--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,7 @@
 server.port=9292
-spring.datasource.url=jdbc:mysql://localhost/genosentinel
-spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${MYSQL_USER}
+spring.datasource.password=${MYSQL_ROOT_PASSWORD}
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
-
-spring.cloud.gateway.globalcors.cors-configurations.[/**].allowed-origins=*
-spring.cloud.gateway.globalcors.cors-configurations.[/**].allowed-methods=GET,POST,PUT,DELETE,OPTIONS
-spring.cloud.gateway.globalcors.cors-configurations.[/**].allowed-headers=*
-spring.cloud.gateway.globalcors.cors-configurations.[/**].allow-credentials=false
