--- a/k8s/autenticacion-secret.yml
+++ b/k8s/autenticacion-secret.yml
@@ -4,4 +4,4 @@ metadata:
   name: autenticacion-db-secret
 type: Opaque
 data:
-    MYSQL_ROOT_PASSWORD: cm9vdA==
+    MYSQL_ROOT_PASSWORD: Q3JpczEyMytA
